--- a/src/app/components/edit-article/edit-article.component.html
+++ b/src/app/components/edit-article/edit-article.component.html
@@ -1,3 +1,4 @@
+<ng-container *ngIf="!isLoading">
 <div class="text-center">
     <h1>Edition de l'article numero {{article.id}}y</h1>
 </div>
@@ -36,9 +37,14 @@
                 <option value="vie locale">vie locale</option>
                 <option value="sport">sport</option>
                 <option value="loisir">loisir</option>
+                <option value="economie">economie</option>
             </select>
             <div [hidden]="categorie.valid" class="alert alert-danger">Le categorie est requis</div>
         </div>
         <input type="submit" [disabled]="!articleForm.valid" value="Envoyer" class="btn btn-success form-control">
     </form>
 </div>
+</ng-container>
+<ng-container *ngIf='isLoading'>
+    <fa-icon [spin]="true" [icon]="faCog" class="fax-3"></fa-icon>
+</ng-container>
