--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,6 +1,6 @@
 <h1 class="d-inline mr-2">
     Les articles presents</h1>
-<a class="ml-2" routerLink="/admin/article/add" class="text-center"><button class="btn btn-success from-control" >Ajouter un Article</button></a>
+<a class="ml-2 " id="addArticle" routerLink="/admin/article/add" class="text-center"><button class="btn btn-success from-control" >Ajouter un Article</button></a>
 <ng-container *ngIf="!isLoading">
 <table class="table table-striped mt-2">
     <thead class="thead-dark">
@@ -15,7 +15,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let article of articles">
+        <tr *ngFor="let article of articles" class="articleLigne">
             <td>{{article.id}}</td>
             <td>{{article.titre}}</td>
             <td>{{article.dateCreated | date:"dd/MM/yyyy"}}</td>
@@ -26,7 +26,7 @@
                 <a class="align-middle" [routerLink]="['/admin/article/edit',article.id]">
                     <fa-icon [icon]="faEdit"></fa-icon>
                 </a>
-                <a class="align-middle" style="color: red; cursor: pointer;" (click)="deleteArticle(article)">
+                <a class="deleteArticle align-middle" style="color: red; cursor: pointer;" (click)="deleteArticle(article.id)">
                     <fa-icon class="ml-3" [icon]="faTrash"></fa-icon>
                 </a>
             </td>
